--- a/app/broker/management/trading-activities.html
+++ b/app/broker/management/trading-activities.html
@@ -4,10 +4,10 @@
             <h4 class="heading">{{"Trading Activities"|translate}}</h4>
         </div>
 
-        <div class="panel-body">
+        <div class="panel-body" ng-init="enableDealParam=true;enableSymbolParam=true">
             <ng-include src="'app/agent/management/include/query.html'"></ng-include>
         </div>
-
+        <div class="space30"></div>
         <div class="panel-body row">
             <div class="pagi-wrap">
                 <div class="col-sm-12" ng-show="pageParams.totalItems>pageParams.itemsPerPage">
