--- a/app/client/client-list.html
+++ b/app/client/client-list.html
@@ -59,7 +59,7 @@
                 </div>
             </form>
         </div>
-
+        <div class="space30"></div>
         <div class="panel-body row">
             <div class="pagi-wrap">
                 <div class="col-sm-12" ng-show="pageParams.totalItems>pageParams.itemsPerPage">
