--- a/app/user/team/team-home.html
+++ b/app/user/team/team-home.html
@@ -1,7 +1,7 @@
 <div ng-controller="TeamHomeController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">{{entity.name}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading">{{entity.name}}</h4>
         </div>
         <div class="panel-body">
             <div class="row">
