--- a/app/user/team/teams.html
+++ b/app/user/team/teams.html
@@ -35,8 +35,7 @@
             <tfoot ng-if="view.editable">
             <tr>
                 <td colspan="4">
-                    <button type="button" class="btn btn-success"
-                            ng-click="create()">
+                    <button type="button" class="btn btn-success"  ng-click="create()">
                         <i class="glyphicon glyphicon-plus" aria-hidden="true"></i>
                     </button>
                 </td>
