--- a/app/agent/report/agent-cash-activity-report.html
+++ b/app/agent/report/agent-cash-activity-report.html
@@ -45,7 +45,7 @@
 
                 <div class="row form-group">
                     <div class="col-sm-12">
-                        <button class="btn btn-primary" type="submit" ng-disabled="editForm.$invalid">
+                        <button class="cbtn-search" type="submit" ng-disabled="editForm.$invalid">
                             <i class="fa fa-search" aria-hidden="true"></i> {{'Search'|translate}}
                         </button>
                     </div>
