--- a/app/agent/management/activities.html
+++ b/app/agent/management/activities.html
@@ -1,6 +1,6 @@
 <div ng-controller="AgentActivityController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'Activities'|translate}}</strong></div>
+        <div class="panel-heading"><h4 class="heading">{{'Activities'|translate}}</h4></div>
 
         <div class="panel-body">
             <ng-include src="'app/agent/management/include/query.html'"></ng-include>
