--- a/app/user/common/jobs.html
+++ b/app/user/common/jobs.html
@@ -65,7 +65,7 @@
                             <input id="startDate" name="startDate" type="text" class="form-control" uib-datepicker-popup
                                    ng-model="archivedJobParams.startDate" is-open="startDate.opened" datepicker-options="dateOptions"/>
                             <span class="input-group-btn">
-                                <button type="button" class="btn btn-default" ng-click="startDate.opened=true"><i class="glyphicon glyphicon-calendar"></i></button>
+                                <button type="button" class="btn btn-default" ng-click="startDate.opened=true"><img src="../../../images/icon-calender-sml.png" /></button>
                             </span>
                         </p>
                     </div>
@@ -81,7 +81,7 @@
                             <input id="endDate" name="endDate" type="text" class="form-control" uib-datepicker-popup
                                    ng-model="archivedJobParams.endDate" is-open="endDate.opened" datepicker-options="dateOptions"/>
                             <span class="input-group-btn">
-                                <button type="button" class="btn btn-default" ng-click="endDate.opened=true"><i class="glyphicon glyphicon-calendar"></i></button>
+                                <button type="button" class="btn btn-default" ng-click="endDate.opened=true"><img src="../../../images/icon-calender-sml.png" /></button>
                             </span>
                         </p>
                     </div>
