--- a/app/user/common/work-note.html
+++ b/app/user/common/work-note.html
@@ -1,7 +1,7 @@
 <div ng-controller="WorkNoteController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">
+        <div class="panel-heading">
+            <h4 class="heading">
                 <span class="text-center" ng-if="view.work.workLink.team">
                     {{view.work.workLink.team.name}}
                 </span>
@@ -17,18 +17,18 @@
                 <span class="text-center" ng-if="view.work.workLink.job">{{view.work.workLink.job.name}}</span>
                 <span class="text-center" ng-if="view.work.id"> - {{"Work Note"|translate}}</span>
                 <span class="text-center" ng-if="!view.work.id"> - {{"New Work Note"|translate}}</span>
-            </strong>
+            </h4>
         </div>
 
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="save()">
                 <div class="row" ng-show="view.jobs && view.jobs.length">
-                    <div class="col-sm-5">
+                    <div class="col-sm-6">
                         <div class="row form-group">
                             <div class="col-sm-12">
                                 <label class="control-label" for="job">{{"Job"|translate}}</label>
                             </div>
-                            <div class="col-sm-10">
+                            <div class="col-sm-12">
                                 <select class="form-control" id="job" name="job"
                                         ng-options="k.name for k in view.jobs" ng-required="view.jobRequired"
                                         ng-model="view.work.workLink.job">
@@ -37,12 +37,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-5" ng-if="view.work.workLink.job">
+                    <div class="col-sm-6" ng-if="view.work.workLink.job">
                         <div class="row form-group">
                             <div class="col-sm-12">
                                 <label class="control-label" for="task">{{"Task"|translate}}</label>
                             </div>
-                            <div class="col-sm-10">
+                            <div class="col-sm-12">
                                 <select class="form-control" id="task" name="task"
                                         ng-options="k.name for k in view.work.workLink.job.tasks"
                                         ng-model="view.work.workLink.task">
@@ -54,19 +54,19 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-sm-5">
+                    <div class="col-sm-6">
                         <div class="row form-group"
                              ng-class="{'has-error': editForm.date.$invalid && editForm.date.$dirty}">
                             <div class="col-sm-12">
                                 <label class="control-label" for="date">{{"Date"|translate}}*</label>
                             </div>
-                            <div class="col-sm-10">
+                            <div class="col-sm-12">
                                 <p class="input-group">
                                     <input id="date" name="date" type="text" class="form-control" uib-datepicker-popup
                                            ng-model="view.work.date" is-open="date.opened" datepicker-options="dateOptions" ng-required="true" />
                                     <span class="input-group-btn">
                                         <button type="button" class="btn btn-default" ng-click="date.opened=true">
-                                            <i class="glyphicon glyphicon-calendar"></i>
+                                            <img src="../../../images/icon-calender-sml.png" />
                                         </button>
                                     </span>
                                 </p>
@@ -74,13 +74,13 @@
                         </div>
                     </div>
 
-                    <div class="col-sm-5"
+                    <div class="col-sm-6"
                          ng-class="{'has-error': editForm.workType.$invalid && editForm.workType.$dirty}">
                         <div class="row form-group">
                             <div class="col-sm-12">
                                 <label class="control-label" for="workType">{{"Work Type"|translate}}*</label>
                             </div>
-                            <div class="col-sm-10">
+                            <div class="col-sm-12">
                                 <select class="form-control" id="workType" name="workType" required
                                         ng-options="k.type for k in view.workTypes"
                                         ng-model="view.work.workType">
@@ -91,13 +91,13 @@
                 </div>
 
                 <div class="row spacer-bottom">
-                    <div class="col-sm-5">
+                    <div class="col-sm-12">
                         <div class="row form-group"
                              ng-class="{'has-error': editForm.minutes.$invalid && editForm.minutes.$dirty}">
                             <div class="col-sm-12">
                                 <label class="control-label" for="minutes">{{"Minutes"|translate}}*</label>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-sm-12">
                                 <input id="minutes" name="minutes" class="form-control"
                                        ng-model="view.work.minutes" required only-digits/>
                             </div>
@@ -106,14 +106,14 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-sm-10">
+                    <div class="col-sm-12">
                         <div class="row form-group"
                              ng-class="{'has-error': editForm.notes.$invalid && editForm.notes.$dirty}">
                             <div class="col-sm-12">
                                 <label class="control-label" for="notes">{{"Notes"|translate}}*</label>
                             </div>
                             <div class="col-sm-12">
-                        <textarea id="notes" name="notes" class="form-control" ng-trim="true" rows="10"
+                                <textarea id="notes" name="notes" class="form-control" ng-trim="true" rows="10"
                                   ng-model="view.work.notes" required></textarea>
                             </div>
                         </div>
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-sm-6">
+                    <div class="col-sm-12">
                         <table class="table table-striped table-hover table-responsive">
                             <thead>
                             <tr>
@@ -157,7 +157,7 @@
                 </div>
 
                 <div class="row form-group">
-                    <div class="col-sm-10">
+                    <div class="col-sm-12">
                         <button class="btn btn-primary btn-file" ng-show="!uploader.isUploading">
                             {{"Select"|translate}} <span class="glyphicon glyphicon-cloud-upload"></span>
                             <input type="file" nv-file-select uploader="uploader"/>
@@ -173,13 +173,13 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-sm-10">
+                    <div class="col-sm-12">
                         <h3>{{"Follow Ups"|translate}}</h3>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-sm-10">
+                    <div class="col-sm-12">
                         <table class="table table-striped table-hover table-responsive">
                             <thead>
                             <tr>
@@ -199,7 +199,7 @@
                                                datepicker-options="dateOptions"/>
                                         <span class="input-group-btn">
                                             <button type="button" class="btn btn-default" ng-click="followUp.$opened=true">
-                                                <i class="glyphicon glyphicon-calendar"></i>
+                                                <img src="../../../images/icon-calender-sml.png" />
                                             </button>
                                         </span>
                                     </p>
