--- a/app/user/clientScreen/client.html
+++ b/app/user/clientScreen/client.html
@@ -2,7 +2,7 @@
     <div class="panel"
          ng-class="{'panel-success': client.clientRole!=='Client','panel-info': client.clientRole=='Client'}">
         <div class="panel-heading text-center">
-            <strong class="heading">{{client.label}}</strong>
+            <h4 class="heading">{{client.label}}</h4>
         </div>
 
         <div class="panel-body">
